--- a/web/style.css
+++ b/web/style.css
@@ -20,6 +20,10 @@ textarea, input, select {background: #E0F2F7;}
 select {width:50%}
 
 textarea.WorknoteRO  {background: #E6E6E6;}
+#Menue {
+    border-bottom: medium solid #009091; 
+    border-top: medium solid #009091;
+}
 #Rahmen_Tabelle {border-color:black;}
 #Header {border-color:black; text-align: right; font-size: 12px}
 #repTime {width:48%}
