--- a/web/style.css
+++ b/web/style.css
@@ -14,7 +14,7 @@ and open the template in the editor.
 	Author:    : Diane Emmrich
 */
 
-table {border-width:1px; border-color:white; border-style:solid; border-spacing: 5px;padding:5px;}
+table {border-width: 1px; border-color:white; border-style: none; border-spacing: 5px;padding:5px;}
 body, select, input  {font-family:Arial; font-size: 15px;}
 textarea, input, select {background: #D7ECEB;}
 select {width:50%}
@@ -26,7 +26,7 @@ textarea.WorknoteRO  {background: #E6E6E6;}
     margin-top: 2px;
 }
 #Rahmen_Tabelle {border-color:black;}
-#Header {border-color:black; text-align: right; font-size: 12px}
+#Header {border-color: white; text-align: right; font-size: 12px}
 #repTime {width:48%}
 #Zeit  {text-align: left;}
 #Logout[type=submit] {
@@ -36,8 +36,15 @@ textarea.WorknoteRO  {background: #E6E6E6;}
 	margin-left: 10px;
 	font-size: 12px
 }
+#Table_Wrap {border-color: white}
 
 table.result {border-collapse: collapse;}
 table.result td {border: 1px solid black;padding: 5px;} 
 table.result thead {border: 1px solid black;padding: 5px; background-color: #E6E6E6}
+
+.divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
+}
 
