class box hinzugefügt

--- a/web/style.css
+++ b/web/style.css
@@ -50,3 +50,7 @@ table.result thead {border: 1px solid black;padding: 5px; background-color: #E6E
 .button{
     width: 200px;
 }
+
+.box{
+    width: 200px;
+}
