--- a/web/style.css
+++ b/web/style.css
@@ -54,3 +54,27 @@ table.result thead {border: 1px solid black;padding: 5px; background-color: #E6E
 .box{
     width: 200px;
 }
+
+.order-table{
+        
+	border-collapse:collapse;
+        border-right: 1px solid #009091;       
+}
+
+
+
+.order-table-odd-row{
+	text-align:left;
+	background:none repeat scroll 0 0 #FFFFFFF;
+        /*
+	border-top:1px solid #BBBBBB;
+        */
+}
+
+.order-table-even-row{
+	text-align:left;
+	background:none repeat scroll 0 0 #F9F9F9;
+        /*
+	border-top:1px solid #BBBBBB;
+        */
+}
